--- a/public/index.html
+++ b/public/index.html
@@ -3,61 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>WunderVision Simple Cards</title>
-    <style>
-        body, html{
-            margin: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        .playingcard{
-            position: fixed; 
-            width: 100px; 
-            height: 175px; 
-            
-            color: white;
-            border: 3px solid green;
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 3rem;
-            font-weight: bold;
-            -moz-user-select: none; 
-            -webkit-user-select: none; 
-            -ms-user-select:none; 
-            user-select:none;
-            -o-user-select:none;
-        }
-        .front{
-            background-color: rgb(136, 201, 255); 
-        }
-        .red{
-            color: red;
-        }
-        .black{
-            color: black;
-        }
-        .back{
-            background-image: radial-gradient(rgb(136, 201, 255) 10%, blue 90%);
-        }
-        .peeking{
-            background-image: radial-gradient(rgb(136, 201, 255) 10%, green 90%);
-        }
-        .whoispeeking{
-            font-size: 1rem;
-            color: white;
-        }
-        ::selection {
-            color: none;
-            background: none;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <button id='reset'>Reset</button>
+    <button id='reset' style="position: fixed; z-index: 1000000000;">Reset</button>
     <div id="playingcards">
     </div>
     <script src="main.js"></script>
